# flauzino-assistant

./: .cursorrules  .dockerignore  .env.example  .gitignore  GEMINI.md  Makefile  README.md  TODO.md  answer.py  main.py  package-lock.json  pyproject.toml  schema.py  scratch.py
.githooks/: pre-commit
.github/workflows/: auto_pr.yml  deploy.yml  feature.yml
.specs/: 02_fechamento_faturas_dashboards.md  ci-cd-workflow.md  fechamento_faturas_dashboards.md  pix-payment-method.md  raspberry-pi-deployment-automation.md  regras_validacao_erros.md
.zed/: debug.json
agent_api/: Dockerfile  README.md  main.py  settings.py
agent_api/core/: database.py  decorators.py  exceptions.py  handlers.py  http_client.py  logger.py
agent_api/models/: chat.py
agent_api/repositories/: chat_repository.py
agent_api/routers/: audio.py  chat.py  ocr.py
agent_api/schemas/: assistant.py  dtos.py  limit.py  spending.py
agent_api/services/: audio.py  backend.py  chat.py  finance.py  llm.py  ocr.py
collections/: insomnia_export.json
config/: settings.py
decision/: decision_node.py
docs/: architecture.mmd
evaluation/: test_ocr_quality.ipynb  test_whisper.ipynb
finance_api/: Dockerfile  README.md  main.py  settings.py
finance_api/core/: database.py  decorators.py  exceptions.py  handlers.py  http_client.py  logger.py
finance_api/models/: categories.py  invoices.py  limits.py  payment_methods.py  payment_owners.py  spents.py  subscriptions.py
finance_api/repositories/: categories.py  invoices.py  limits.py  payment_methods.py  payment_owners.py  spents.py  subscriptions.py
finance_api/routers/: categories.py  (+6 more)
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
infra/: docker-compose.yml
nodes/: extract_budget.py  extract_spent.py  normal_conversation.py  spent_node.py
schemas/: assistant.py  limit.py  spending.py
scripts/: backup_db.sh
specs/: development-standards.md  telegram-bot-entity-interaction.md
telegram_api/: Dockerfile  README.md  __init__.py  main.py  settings.py
tests/: test_payment_methods.py  test_payment_owners.py  verify_catch_all.py
utils/: config.py
(+58 files in other folders)
